--- a/UserNavTemplate.html
+++ b/UserNavTemplate.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="./UserNavTemplate.css">
     <link rel="stylesheet" href="./UserHistory.css">
+    <link rel="stylesheet" href="./Browse.css">
+    <link rel="stylesheet" href="./Favorites.css">
+    <link rel="stylesheet" href="./BooksRequest.css">
+
 
     <title>LiBorrow User's Dashboard</title>
 </head>
@@ -119,6 +122,7 @@
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById("body-content").innerHTML = data;
+                    initializeBookViewDetailsButtons();
                     document.title = "Dashboard"; // Change the page title
                     document.getElementById("page-title").innerText = "Dashboard"; // Change the displayed title
                     renderCharts();
@@ -155,6 +159,23 @@
                 .catch(error => console.error('Error fetching content:', error));
         });
 
+        function initializeBookViewDetailsButtons() {
+            document.querySelectorAll(".viewDetsbtn").forEach(button => {
+                button.addEventListener("click", function(event) {
+                    event.preventDefault();
+                    fetch('./ViewDetails.html')
+                        .then(response => response.text())
+                        .then(data => {
+                            document.getElementById("body-content").innerHTML = data;
+                            document.title = "View Details"; // Change the page title
+                            document.getElementById("page-title").innerText = "View Details"; // Change the displayed title
+                        })
+                        .catch(error => handleError('Error fetching ReadersInformation:', error));
+                });
+            });
+        } 
+
+
         //BORROWED BOOKS CONTENT
         document.getElementById("button2").addEventListener("click", function(event) {
             event.preventDefault();
@@ -176,7 +197,7 @@
                 .then(data => {
                     document.getElementById("body-content").innerHTML = data;
                     document.title = "Borrowed Request"; // Change the page title
-                    document.getElementById("page-title").innerText = "Borrowed Books"; // Change the displayed title
+                    document.getElementById("page-title").innerText = "Borrowed Request"; // Change the displayed title
                 })
                 .catch(error => console.error('Error fetching content:', error));
         });
