--- a/UserDash.html
+++ b/UserDash.html
@@ -140,7 +140,7 @@
                     </div>
                     <div class="Books">
                         <img src="./Images/somewhere beyond.svg" height="185px" width="125px">
-                        <p class="Title">Somewhere Beyond the Sea</p>
+                        <p class="Title" style="font-size: 10px;">Somewhere Beyond the Sea</p>
                         <p class="Author">Tj Klune</p>
                         <img src="./Images/RatingComponent.svg" class="rating">
                     </div>
