Added browse, favorites, book requests, view details/pending/available

--- a/Browse.html
+++ b/Browse.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="content-box" id="content2">
+<div class="browse-box" >
     <div class="container">
         <div class="Userinput" id="search-boks">
             <div class="search-bar">
