--- a/UserNavTemplate.html
+++ b/UserNavTemplate.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="./Browse.css">
     <link rel="stylesheet" href="./Favorites.css">
     <link rel="stylesheet" href="./BooksRequest.css">
+    <link rel="stylesheet" href="./ViewDetails.css">
+    <link rel="stylesheet" href="./ViewDetailsPending.css">
+    <link rel="stylesheet" href="./ViewDetailsAvailable.css">
 
 
     <title>LiBorrow User's Dashboard</title>
