--- a/ViewDetailsAvailable.html
+++ b/ViewDetailsAvailable.html
@@ -6,6 +6,7 @@
     <title>Transactions Section</title>
     <link rel="stylesheet" href="./Browse.css"> <!-- Linking the CSS file here -->
     <link rel="stylesheet" href="./ViewDetails.css"> <!-- Linking the CSS file here -->
+    <link rel="stylesheet" href="./ViewDetailsAvailable.css">
 </head>
 <body>
 
@@ -16,16 +17,16 @@
             <img src="./Images/Expand_right.svg" alt="expand-icon" width="15" height="15" id="expan">
             <p>Romance</p>
             <img src="./Images/Expand_right.svg" alt="expand-icon" width="15" height="15" id="expan">
-            <p>Pride and Prejudice</p>
+            <p>Jane Eyre</p>
         </div>
         <div class="Viewdiv1">
             <!-- Content for the first div -->
             <div class="Book-Cover">
-                <img src="./Images/PridePrejudice.png" alt="Pride and Prejudice" id="Pride-Book" height="400">
+                <img src="./Images/Jane-Eyre-cover.png" alt="Jane-Eyre-cover" id="Pride-Book" height="400">
             </div>
             <div class="BookDetails-View">
                     <div class="title-book">
-                        <h2 id="main-title">Pride and Prejudice</h2>
+                        <h2 id="main-title">Jane Eyre</h2>
                         <div class="status">
                             <button class="av-btn" id="stats-btn2">
                                 <img  src="./Images/Check.svg" alt="Book status" class="book-status" id="staticon" width="19" height="19">
@@ -54,9 +55,16 @@
                     <div class="desc">
                         <p><span id="desnuts">Description:</span> <br>Lorem ipsum dolor sit amet. Et molestiae consequatur et culpa dignissimos rem officia accusantium 
                             aut accusamus doloribus ut tempora minima rem laborum sint? Sed voluptatem commodi eum velit quasi a cupiditate 
-                            mollitia sed doloremque exercitationem eos nobis eligendi. Qui consequatur tempora ut illum minima quo omnis
+                            mollitia sed doloremque exercitationem eos nobis eligendi. Qui consequatur tempora ut illum minima quo omnis 
                             molestias aut asperiores voluptatem.</p>
                         <a id="Read-More" href="#"> Read More</a>
+                        <p id="srtendDate">Start Date: 09/20/2024</p>
+                        <p id="srtendDate">Start Date: 09/28/2024</p>   
+                        <div class="BorrowSimilar-btn">
+                            <button class="borrow-button" id="borbtn2">Borrow</button>
+                            <button class="similar-button" id="similarbtn">Similar to this</button>
+                        </div>
+
                     </div>
             </div>
         </div>
