--- a/ViewDetailsPending.html
+++ b/ViewDetailsPending.html
@@ -6,6 +6,8 @@
     <title>Transactions Section</title>
     <link rel="stylesheet" href="./Browse.css"> <!-- Linking the CSS file here -->
     <link rel="stylesheet" href="./ViewDetails.css"> <!-- Linking the CSS file here -->
+    <link rel="stylesheet" href="./ViewDetailsPending.css"> <!-- Linking the CSS file here -->
+
 </head>
 <body>
 
@@ -16,25 +18,25 @@
             <img src="./Images/Expand_right.svg" alt="expand-icon" width="15" height="15" id="expan">
             <p>Romance</p>
             <img src="./Images/Expand_right.svg" alt="expand-icon" width="15" height="15" id="expan">
-            <p>Pride and Prejudice</p>
+            <p>In Search of Lost Time</p>
         </div>
         <div class="Viewdiv1">
             <!-- Content for the first div -->
             <div class="Book-Cover">
-                <img src="./Images/PridePrejudice.png" alt="Pride and Prejudice" id="Pride-Book" height="400">
+                <img src="./Images/In-Serach-of-lost-time.svg" alt="In-Serach-of-lost-time" id="Pride-Book" height="400">
             </div>
             <div class="BookDetails-View">
                     <div class="title-book">
-                        <h2 id="main-title">Pride and Prejudice</h2>
+                        <h2 id="main-title">In search of Lost Time</h2>
                         <div class="status">
-                            <button class="av-btn" id="stats-btn2">
-                                <img  src="./Images/Check.svg" alt="Book status" class="book-status" id="staticon" width="19" height="19">
-                                Available
+                            <button class="av-btn" id="stats-btn4">
+                                <img  src="./Images/PendingBook-icon.svg" alt="Book status" class="book-status" id="staticon" width="19" height="19">
+                                Pending
                             </button>
                        </div>
                     </div>
                     <div class="auth">
-                        <p>Author: Jane Austen  |  Publication Date: January 28, 1813</p>
+                        <p>Author: marcel Proust  |  Publication Date: 1913</p>
                     </div>   
                     <div class="Ave-Rating" id="book-rating">
                         <p>Average Rating: 
@@ -44,7 +46,7 @@
                     </div>
                     <div id="Genre">
                         <p>Genre: 
-                            <a id="GenRo" href="#s">Romance</a>,
+                            <a id="GenRo" href="#s">Philosophy</a>,
                             <a id="GenFic" href="#">Fiction</a>
                         </p>
                     </div>
@@ -58,6 +60,8 @@
                             molestias aut asperiores voluptatem.</p>
                         <a id="Read-More" href="#"> Read More</a>
                     </div>
+
+                    <button class="cancel-button" id="borbtn2">Cancel Request</button>
             </div>
         </div>
 
