--- a/Favorites.html
+++ b/Favorites.html
@@ -78,7 +78,7 @@
                         <img src="./Images/Rating Component.svg" alt="rating one" id="rating-image" width="150" height="150">
                         <p id="B-title">Beloved</p>
                         <p id="Book-Author">Catherine Lacey</p>
-                        <button id="borbtn2">Returned</button>
+                        <button id="borbtn2">Return</button>
                 </div>
 
                 <!-- Div 8 -->
