--- a/UserDash.html
+++ b/UserDash.html
@@ -205,7 +205,7 @@
                         <p class="BookAuthor">Toni Marison</p>
                         <img src="./Images/RatingComponent.svg" id="BookRaiting">
                         <br>
-                        <a class="ViewDetailsButton"> View Details</a>
+                        <a href="#" class="ViewDetailsButton"> View Details</a>
                         <div class="ProgBarContainer">
                             <div class="progress">
                                 <div class="progress-bar bg-success" role="progressbar" style="width: 10%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
