--- a/UserMyBooks.html
+++ b/UserMyBooks.html
@@ -6,8 +6,7 @@
 </head>
 
 <div class="Reader-MyBooks container-fluid d-flex p-0">
-    <div class="container" style="text-align: center;">
-
+    <div class="MBcontainer" style="padding-left: 15%;">
         <!-- SEARCHBAR AND SORT BUTTON -->
         <div class="inputSection">
             <div class="search-bar">
